[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Box" type="VBoxContainer" parent="Center"]
margin_left = 464.0
margin_top = 264.0
margin_right = 560.0
margin_bottom = 336.0
custom_constants/separation = 32

[node name="Waiting" type="Label" parent="Center/Box"]
visible = false
margin_right = 158.0
margin_bottom = 14.0
text = "WAITING FOR PLAYERS..."
align = 1
valign = 1

[node name="PlayerCount" type="Label" parent="Center/Box"]
visible = false
margin_right = 96.0
margin_bottom = 14.0
text = "1/32"
align = 1
valign = 1

[node name="Join" type="Button" parent="Center/Box"]
margin_right = 96.0
margin_bottom = 20.0
text = "JOIN SERVER"

[node name="Host" type="Button" parent="Center/Box"]
margin_top = 52.0
margin_right = 96.0
margin_bottom = 72.0
text = "HOST SERVER"

[node name="Start" type="Button" parent="Center/Box"]
visible = false
margin_top = 104.0
margin_right = 96.0
margin_bottom = 124.0
text = "START GAME"

[node name="Cancel" type="Button" parent="Center/Box"]
visible = false
margin_top = 150.0
margin_right = 96.0
margin_bottom = 170.0
text = "CANCEL"

[node name="JoinTimeout" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Center/Box/Join" to="." method="join"]
[connection signal="pressed" from="Center/Box/Host" to="." method="host"]
[connection signal="pressed" from="Center/Box/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Center/Box/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="timeout" from="JoinTimeout" to="." method="_on_JoinTimeout_timeout"]
